<resources>
    <string name="app_name">Dellamite2</string>
    <string name="categorias">Categorías</string>
    <string name="frutas">Frutas</string>
    <string name="verduras">Verduras</string>
    <string name="panaderia">Panadería</string>
    <string name="lacetos">Lácteos</string>
    <string name="carnes">Carnes</string>
    <string name="pescados">Pescados y Mariscos</string>
    <string name="salchichoneria">Salchichonería</string>
    <string name="congelados">Congelados</string>
    <string name="despensa">Despensa</string>
    <string name="bebidas">Bebidas</string>
    <string name="licores">Vinos y licores</string>
    <string name="farmacia">Farmacia</string>
    <string name="higiene">Higiene personal</string>
    <string name="belleza">Belleza</string>
    <string name="limpieza">Limpieza</string>
    <string name="ddd" />
    <string name="mascotas">Mascotas</string>
    <string name="juguetes">Juguetería</string>
    <string name="bebes">Bebés</string>
    <string name="ropa">Ropa</string>
    <string name="calzado">Calzado</string>
    <string name="hogar">Productos del hogar</string>
    <string name="electronica">Electrónica</string>
    <string name="jardineria">Jardinería</string>
    <string name="buscar">Buscar</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="mis_listas">Mis listas</string>
    <string name="carrito">Carrito</string>
    <string name="config">Configuración</string>
    <string name="delamite">DELLAMITE</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="sesion">Inicia sesión</string>
    <string name="tituloLista">Lista</string>
    <string name="fecha_creacion">Fecha</string>
    <string name="guardar_lista">Guardar lista</string>
    <string name="total">Total</string>
    <string name="agregar">Agregar al carrito</string>
    <string name="nombre_producto">Nombre del producto</string>
    <string name="cantidad">Cantidad</string>

    <string-array name="NombreProducto">
        <item>Leche Lala</item>
        <item>Fanta naranja</item>
        <item>Camisa Gucci</item>
        <item>Pepto bismol</item>
    </string-array>
</resources>